SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/75
  New function to execute a SQL in multiple Sessions:
  The new Session toolbar button "Run SQL in all open Sessions" (ctrl+alt+shift+ENTER)
  executes the current SQL in all open Sessions.
  The feature can be switched off at menu File --> Global Preferences --> tab SQL
  --> checkbox "Allow to run a SQL in all open Sessions"

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/74
  Multiple selected Aliases can be selected and connected to.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/73
  Security: Introduced option to use a key password for encrypting Alias passwords.
  When a key password is used SQuirreL can decrypt Alias-passwords only after the key password was entered.
  SQuirreL stores the key password in memory only. As a consequence the key password must be entered
  after SQuirreL was started and before an Alias, that uses password encryption, can be connected to.
  See menu File --> "Alias password encryption security ..."
  Although this feature increases security still note: For maximum security do not save passwords in Aliases.

The "Copy as WIKI Table" - function of tables now supports copying the Jira/Cloud table format.
  See the right mouse menu of any table.

For databases which support catalogs the "Refresh tree and Cache" function
  now refreshes the catalogs combo box, too.
  Info: To execute the refresh function use F5, toolbar or the Session menu --> "Refresh tree and Cache"

#1536 and https://github.com/squirrel-sql-client/squirrel-sql-code/issues/67
  Alias properties: Driver properties table is now sortable.

DB2 Plugin: The table details in the Object tree has a new tab