@@ -76,3 +76,12 @@ PopupEditableIOPanel.no.word.wrap.without.line.wrap=Word wrap is
 
 
 popupEditableIoPanel.cannot.update.binary.display.while.reformatted=Cannot update binary display while display is reformatted.
+
+DecodeSelection.menu=Decode selection
+DecodeSelection.menu.tooltip=Decode selected text to message panel
+
+DecodeSelection.menu.item.decode.base64=Decode Base64 to message panel
+DecodeSelection.menu.item.decode.base32=Decode Base32 to message panel
+DecodeSelection.menu.item.decode.hex=Decode HEX to message panel
+
+DecodeSelection.no.text.selected.to.decode=No text selected to decode
